<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">支付宝</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="city_title4">社保卡服务</string>
    <string name="city_title3">公积金服务</string>
    <string name="city_title2">地铁购票</string>
    <string name="city_title1">高考服务</string>

    <string name="shebaoshuoming1">
        1.本系统支持河南省灵活就业人员和城乡居民申报缴纳社保费.</string>
    <string name="shebaoshuoming2">
        2.灵活就业人员需要在社保经办机构登记核定应缴纳的社保费信息，然后在本系统按月缴纳社保费.</string>
    <string name="shebaoshuoming3">
        3.城乡居民社保信息不需要核定，可自行选择缴纳养老保险或医疗保险，并选择相应的缴纳档次进行缴费.</string>
    <string name="shebaoshuoming4">
        4.城乡居民人员缴纳期限：7至12月份缴纳下一年的医疗保险，1至12月份缴纳当年的养老保险.</string>
    <string name="shebaoshuoming5">
        5.灵活就业人员缴纳期限：自行选择缴纳当年社保经办机构已传递的按月缴纳的社保费.</string>

    <string name="xieyi">同意<font color='#ff108ee9'>《授权协议》</font></string>

</resources>
