<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/img_city"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:scaleType="centerCrop"
            android:src="@drawable/zhengzhou" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/toolbar_height"
            android:gravity="center"
            android:text="郑州"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tv_city"
            android:layout_below="@+id/tv_city"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_wendu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="34℃"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_kongqi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@color/yellow_f39"
                android:gravity="center"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="71空气良"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/tv_city"
            android:layout_marginBottom="5dp"
            android:src="@drawable/c_geren" />

        <TextView
            android:id="@+id/tv_person"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/tv_city"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:paddingEnd="16dp"
            android:paddingStart="44dp"
            android:text="个人中心"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="18dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:id="@+id/ll_title2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/city_title_selector"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/c_big_ditie" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:text="@string/city_title2"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_title3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/city_title_selector"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/c_big_gongjijin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:text="@string/city_title3"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_title4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/city_title_selector"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/c_big_shebaoka" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:text="@string/city_title4"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_title1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/city_title_selector"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp"
            android:visibility="invisible">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/c_big_gaokao" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:text="@string/city_title1"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
